2009-09-29  Juanma Barranquero  <lekktu@gmail.com>

	* org-agenda.el (org-agenda-restore-windows-after-quit):
	Fix typo in docstring.

2009-09-23  Juanma Barranquero  <lekktu@gmail.com>

	* org.el (org-tree-to-indirect-buffer, org-convert-to-oddeven-levels)
	(org-shiftselect-error, org-ctrl-c-ctrl-c):
	* org-agenda.el (org-agenda-undo, org-check-for-org-mode):
	* org-attach.el (org-attach-check-absolute-path):
	* org-docbook.el (org-export-as-docbook):
	* org-html.el (org-export-as-html):
	* org-id.el (org-id-update-id-locations):
	* org-table.el (org-table-fedit-lisp-indent, orgtbl-send-table):
	Fix typos in error messages.

2009-09-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* org-ascii.el: Require CL for the `loop' macro.

2009-09-05  Carsten Dominik  <dominik@u016822.science.uva.nl>

	* org-gnus.el (require): Wrap (require gnus-sum) into
	eval-when-compile.

2009-09-03  Carsten Dominik  <dominik@u016822.science.uva.nl>

	* org-protocol.el (org-protocol-store-link)
	(org-protocol-remember, org-protocol-open-source): Remove autoload
	cookies again.

	* org-agenda.el (org-agenda-dim-blocked-tasks): Make sure we are
	referencing the start of the line.

	* org-gnus.el: Remove unnecessary declare-function forms.
	(gnus-sum): Always require gnus-sum.

2009-09-02  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-protocol.el (org-protocol-store-link)
	(org-protocol-remember, org-protocol-open-source): Add autoloads.

	* org-compat.el (org-float-time): New function.

	* org.el (org-clock-update-time-maybe)
	(org-sort-entries-or-items, org-do-sort)
	(org-evaluate-time-range, org-time-string-to-seconds)
	(org-closed-in-range): Use `org-float-time'.

	* org-timer.el (org-timer-start, org-timer-pause-or-continue)
	(org-timer-seconds): Use `org-float-time'.

	* org-clock.el (org-clock-get-clocked-time, org-clock-out)
	(org-clock-sum, org-dblock-write:clocktable)
	(org-clocktable-steps): Use `org-float-time'.

	* org-agenda.el (org-agenda-last-marker-time)