@@ -42,7 +42,7 @@
 
 (declare-function org-table-clean-before-export "org-exp"
 		  (lines &optional maybe-quoted))
-(declare-function org-format-org-table-html "org-exp" (lines &optional splice))
+(declare-function org-format-org-table-html "org-html" (lines &optional splice))
 (defvar orgtbl-mode) ; defined below
 (defvar orgtbl-mode-menu) ; defined when orgtbl mode get initialized
 (defvar org-export-html-table-tag) ; defined in org-exp.el
